# Astronomical-Image-Reduction-Tool

./: .coverage  .gitignore  AIRT.bat  AUTHORS.md  README.md  app.py  coverage.xml  create_airt_shortcut.ps1  pyproject.toml  requirements.txt  setup_environment.bat
reduction_tool/: calibration.py  models.py  processing.py
src/airt/core/: final_render.py
src/airt/project/: recent.py
src/airt/qt/: theme.py
src/airt/qt/widgets/: fits_preview_dialog.py  step_sidebar.py
src/airt/qt/wizard/: alignment_step.py  background_step.py  files_step.py  final_composition_step.py  folders_step.py  frame_review_step.py  placeholder_step.py  preset_step.py  processing_step.py  welcome_step.py  wizard_window.py
